# YouTubeTranscribeExtractor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  get_transcript.py  main.cpp  resources.qrc.in  resources.rc
.github/: FUNDING.yml
.github/workflows/: release.yml
